<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meishijie</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">搜索</string>
    <string name="search_menu">搜索菜谱、食材</string>
    <string name="internet">网络</string>
    <string name="local">本地</string>
    <string name="internet_search">网络搜索</string>
    <string name="local_search">本地搜索</string>
    <string name="desc">image</string>

    <string name="tudou">土豆</string>
    <string name="doufu">豆腐</string>
    <string name="zhuxiaopai">猪小排</string>
    <string name="jidan">鸡蛋</string>
    <string name="niurou">牛肉</string>
    <string name="qiezi">茄子</string>
    <string name="nandu">按难度</string>
    <string name="gongyi">按工艺</string>
    <string name="kouwei">按口味</string>
</resources>